🐛 Fix: Remove content extending beyond footer - Fixed .shape-2 bottom positioning from -100px to 0px - Eliminated visual overflow that caused content to appear after footer - Clean page layout now ends properly with footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -200,7 +200,7 @@
   width: 200px;
   height: 200px;
   background-color: #33ccff;
-  bottom: -100px;
+  bottom: 0px;
   left: 10%;
   opacity: 0.08;
 }
